// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should match snapshot on read only 1`] = `
<div>
  <span
    class="variable variable"
  >
    <div
      class="octo-group-header-cell expanded"
      draggable="true"
      style="opacity: 1;"
    >
      <div
        class="octo-table-cell"
        style="width: 100px;"
      >
        <button
          class="Button IconButton hello-world css-w119tu"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-qolhez-MuiSvgIcon-root"
            data-testid="ArrowDropDownOutlinedIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="m7 10 5 5 5-5z"
            />
          </svg>
        </button>
        <span
          class="Label propColorTurquoise "
        >
          <input
            class="Editable readonly undefined"
            placeholder="New Select"
            readonly=""
            spellcheck="true"
            title="value 1"
            value="value 1"
          />
        </span>
      </div>
      <button
        class="Button size--small"
        type="button"
      >
        <span>
          0
        </span>
      </button>
    </div>
  </span>
</div>
`;

exports[`should match snapshot with Group 1`] = `
<div>
  <span
    class="variable variable"
  >
    <div
      class="octo-group-header-cell expanded"
      draggable="true"
      style="opacity: 1;"
    >
      <div
        class="octo-table-cell"
        style="width: 100px;"
      >
        <button
          class="Button IconButton hello-world css-w119tu"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-qolhez-MuiSvgIcon-root"
            data-testid="ArrowDropDownOutlinedIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="m7 10 5 5 5-5z"
            />
          </svg>
        </button>
        <span
          class="Label propColorTurquoise "
        >
          <input
            class="Editable undefined"
            placeholder="New Select"
            spellcheck="true"
            title="value 1"
            value="value 1"
          />
        </span>
      </div>
      <button
        class="Button size--small"
        type="button"
      >
        <span>
          0
        </span>
      </button>
      <div
        aria-label="menuwrapper"
        class="MenuWrapper"
        data-testid="menu-wrapper"
        role="button"
      >
        <button
          class="Button IconButton css-w119tu"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-qolhez-MuiSvgIcon-root"
            data-testid="MoreHorizIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M6 10c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2m12 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2m-6 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2"
            />
          </svg>
        </button>
      </div>
      <button
        class="Button IconButton css-w119tu"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-qolhez-MuiSvgIcon-root"
          data-testid="AddIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6z"
          />
        </svg>
      </button>
    </div>
  </span>
</div>
`;

exports[`should match snapshot, add new 1`] = `
<div>
  <span
    class="variable variable"
  >
    <div
      class="octo-group-header-cell expanded"
      draggable="true"
      style="opacity: 1;"
    >
      <div
        class="octo-table-cell"
        style="width: 100px;"
      >
        <button
          class="Button IconButton hello-world css-w119tu"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-qolhez-MuiSvgIcon-root"
            data-testid="ArrowDropDownOutlinedIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="m7 10 5 5 5-5z"
            />
          </svg>
        </button>
        <span
          class="Label propColorTurquoise "
        >
          <input
            class="Editable undefined"
            placeholder="New Select"
            spellcheck="true"
            title="value 1"
            value="value 1"
          />
        </span>
      </div>
      <button
        class="Button size--small"
        type="button"
      >
        <span>
          0
        </span>
      </button>
      <div
        aria-label="menuwrapper"
        class="MenuWrapper"
        data-testid="menu-wrapper"
        role="button"
      >
        <button
          class="Button IconButton css-w119tu"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-qolhez-MuiSvgIcon-root"
            data-testid="MoreHorizIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M6 10c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2m12 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2m-6 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2"
            />
          </svg>
        </button>
      </div>
      <button
        class="Button IconButton css-w119tu"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-qolhez-MuiSvgIcon-root"
          data-testid="AddIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6z"
          />
        </svg>
      </button>
    </div>
  </span>
</div>
`;

exports[`should match snapshot, edit title 1`] = `
<div>
  <span
    class="variable variable"
  >
    <div
      class="octo-group-header-cell expanded"
      draggable="true"
      style="opacity: 1;"
    >
      <div
        class="octo-table-cell"
        style="width: 100px;"
      >
        <button
          class="Button IconButton hello-world css-w119tu"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-qolhez-MuiSvgIcon-root"
            data-testid="ArrowDropDownOutlinedIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="m7 10 5 5 5-5z"
            />
          </svg>
        </button>
        <span
          class="Label propColorTurquoise "
        >
          <input
            class="Editable undefined"
            placeholder="New Select"
            spellcheck="true"
            title="value 1"
            value="value 1"
          />
        </span>
      </div>
      <button
        class="Button size--small"
        type="button"
      >
        <span>
          0
        </span>
      </button>
      <div
        aria-label="menuwrapper"
        class="MenuWrapper"
        data-testid="menu-wrapper"
        role="button"
      >
        <button
          class="Button IconButton css-w119tu"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-qolhez-MuiSvgIcon-root"
            data-testid="MoreHorizIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M6 10c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2m12 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2m-6 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2"
            />
          </svg>
        </button>
      </div>
      <button
        class="Button IconButton css-w119tu"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-qolhez-MuiSvgIcon-root"
          data-testid="AddIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6z"
          />
        </svg>
      </button>
    </div>
  </span>
</div>
`;

exports[`should match snapshot, hide group 1`] = `
<div>
  <span
    class="variable variable"
  >
    <div
      class="octo-group-header-cell"
      draggable="true"
      style="opacity: 1;"
    >
      <div
        class="octo-table-cell"
        style="width: 100px;"
      >
        <button
          class="Button IconButton hello-world css-w119tu"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-qolhez-MuiSvgIcon-root"
            data-testid="ArrowDropDownOutlinedIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="m7 10 5 5 5-5z"
            />
          </svg>
        </button>
        <span
          class="Label propColorTurquoise "
        >
          <input
            class="Editable undefined"
            placeholder="New Select"
            spellcheck="true"
            title="value 1"
            value="value 1"
          />
        </span>
      </div>
      <button
        class="Button size--small"
        type="button"
      >
        <span>
          0
        </span>
      </button>
      <div
        aria-label="menuwrapper"
        class="MenuWrapper"
        data-testid="menu-wrapper"
        role="button"
      >
        <button
          class="Button IconButton css-w119tu"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-qolhez-MuiSvgIcon-root"
            data-testid="MoreHorizIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M6 10c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2m12 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2m-6 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2"
            />
          </svg>
        </button>
      </div>
      <button
        class="Button IconButton css-w119tu"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-qolhez-MuiSvgIcon-root"
          data-testid="AddIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6z"
          />
        </svg>
      </button>
    </div>
  </span>
</div>
`;

exports[`should match snapshot, no groups 1`] = `
<div>
  <span
    class="variable variable"
  >
    <div
      class="octo-group-header-cell expanded"
      draggable="true"
      style="opacity: 1;"
    >
      <div
        class="octo-table-cell"
        style="width: 100px;"
      >
        <button
          class="Button IconButton hello-world css-w119tu"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-qolhez-MuiSvgIcon-root"
            data-testid="ArrowDropDownOutlinedIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="m7 10 5 5 5-5z"
            />
          </svg>
        </button>
        <span
          class="Label empty "
          title="Items with an empty Property 1 property will go here. This column cannot be removed."
        >
          No Property 1
        </span>
      </div>
      <button
        class="Button size--small"
        type="button"
      >
        <span>
          0
        </span>
      </button>
      <div
        aria-label="menuwrapper"
        class="MenuWrapper"
        data-testid="menu-wrapper"
        role="button"
      >
        <button
          class="Button IconButton css-w119tu"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-qolhez-MuiSvgIcon-root"
            data-testid="MoreHorizIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M6 10c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2m12 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2m-6 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2"
            />
          </svg>
        </button>
      </div>
      <button
        class="Button IconButton css-w119tu"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-qolhez-MuiSvgIcon-root"
          data-testid="AddIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6z"
          />
        </svg>
      </button>
    </div>
  </span>
</div>
`;
